[gd_scene load_steps=51 format=3 uid="uid://ccmbhcieqerou"]

[ext_resource type="Script" uid="uid://c8y052o3aueew" path="res://scripts/bomberPiggy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b8u2mpprqr4qw" path="res://Assets/Sprites/05-Pig Thowing a Bomb/09-PigWithBomb.png" id="2"]
[ext_resource type="Texture2D" uid="uid://lq6k40rlk0fs" path="res://Assets/Sprites/05-Pig Thowing a Bomb/Idle (26x26).png" id="2_akp0b"]
[ext_resource type="AudioStream" uid="uid://ckktnk3xld4yx" path="res://Assets/Sounds/effects/enemies/pig_hrrr.wav" id="3"]
[ext_resource type="Texture2D" uid="uid://cedajv6pf123m" path="res://Assets/Sprites/05-Pig Thowing a Bomb/Picking Bomb (26x26).png" id="3_wvbuv"]
[ext_resource type="AudioStream" uid="uid://b4cwq1lngbvl1" path="res://Assets/Sounds/effects/enemies/pig_die.wav" id="4"]
[ext_resource type="Texture2D" uid="uid://b1l6amkvg6rw5" path="res://Assets/Sprites/05-Pig Thowing a Bomb/Run (26x26).png" id="4_v84bl"]
[ext_resource type="Texture2D" uid="uid://16ajyr21l6q6" path="res://Assets/Sprites/05-Pig Thowing a Bomb/Throwing Boom (26x26).png" id="5_653xe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6pfl"]
atlas = ExtResource("2_akp0b")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrol5"]
atlas = ExtResource("2_akp0b")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd27v"]
atlas = ExtResource("2_akp0b")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfm57"]
atlas = ExtResource("2_akp0b")
region = Rect2(78, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5u5g"]
atlas = ExtResource("2_akp0b")
region = Rect2(104, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xs0j0"]
atlas = ExtResource("2_akp0b")
region = Rect2(130, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_au63l"]
atlas = ExtResource("2_akp0b")
region = Rect2(156, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_djovx"]
atlas = ExtResource("2_akp0b")
region = Rect2(182, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_yak2d"]
atlas = ExtResource("2_akp0b")
region = Rect2(208, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fep50"]
atlas = ExtResource("2_akp0b")
region = Rect2(234, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1b0e"]
atlas = ExtResource("3_wvbuv")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwhg1"]
atlas = ExtResource("3_wvbuv")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6r41"]
atlas = ExtResource("3_wvbuv")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpnj3"]
atlas = ExtResource("3_wvbuv")
region = Rect2(78, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_63lhh"]
atlas = ExtResource("4_v84bl")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyp71"]
atlas = ExtResource("4_v84bl")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sal4"]
atlas = ExtResource("4_v84bl")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7y0x"]
atlas = ExtResource("4_v84bl")
region = Rect2(78, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_0c6kf"]
atlas = ExtResource("4_v84bl")
region = Rect2(104, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgafd"]
atlas = ExtResource("4_v84bl")
region = Rect2(130, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qvjs"]
atlas = ExtResource("5_653xe")
region = Rect2(0, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4qsh"]
atlas = ExtResource("5_653xe")
region = Rect2(26, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_63ugd"]
atlas = ExtResource("5_653xe")
region = Rect2(52, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3ong"]
atlas = ExtResource("5_653xe")
region = Rect2(78, 0, 26, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3pfi"]
atlas = ExtResource("5_653xe")
region = Rect2(104, 0, 26, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_a5dfg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6pfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrol5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd27v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfm57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5u5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs0j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au63l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djovx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yak2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fep50")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1b0e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwhg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6r41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpnj3")
}],
"loop": false,
"name": &"picking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_63lhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyp71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sal4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7y0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0c6kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgafd")
}],
"loop": false,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qvjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4qsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63ugd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3ong")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3pfi")
}],
"loop": false,
"name": &"throwing",
"speed": 10.0
}]

[sub_resource type="Animation" id="1"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [44, 43, 44, 42, 41, 42]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="2"]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EffectPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="12"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [23, 24, 25]
}

[sub_resource type="Animation" id="3"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_pbxqp"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="4"]
resource_name = "PickUp"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="5"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="Animation" id="6"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"animation_after_attack"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcxnd"]
_data = {
&"Attack": SubResource("1"),
&"Dead": SubResource("2"),
&"Hit": SubResource("12"),
&"Idle": SubResource("3"),
&"Jump": SubResource("Animation_pbxqp"),
&"PickUp": SubResource("4"),
&"Run": SubResource("5"),
&"Throw": SubResource("6")
}

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(18, 14)

[sub_resource type="RectangleShape2D" id="8"]
size = Vector2(24, 2)

[sub_resource type="RectangleShape2D" id="9"]
size = Vector2(28, 12)

[sub_resource type="Animation" id="10"]
resource_name = "Fast"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="11"]
resource_name = "Normal"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4i1xp"]
_data = {
&"Fast": SubResource("10"),
&"Normal": SubResource("11")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2mv63"]
size = Vector2(16, 18)

[node name="bomberPiggy" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1")
disable_move = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_a5dfg")
animation = &"idle"

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.837412, 0.837412, 1)
position = Vector2(0, -13)
texture = ExtResource("2")
hframes = 10
vframes = 5
frame = 44

[node name="ani" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lcxnd")
}
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -7)
shape = SubResource("7")

[node name="StompDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color(0.0784314, 0, 1, 1)
position = Vector2(-1, -15)
shape = SubResource("8")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color(1, 0, 0, 1)
position = Vector2(-1, -7)
shape = SubResource("9")

[node name="AttackTime" type="Timer" parent="."]
wait_time = 1.5

[node name="BombStart" type="Marker2D" parent="."]
position = Vector2(-9, -14)

[node name="EffectPlayer" type="AudioStreamPlayer" parent="."]

[node name="Color" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4i1xp")
}

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, -11)
shape = SubResource("RectangleShape2D_2mv63")

[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="AttackTime" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
